# typesitter

./: .gitconfig  .prettierrc.json  .rustfmt.toml  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  index.html  manifest.webmanifest  registerSW.js  rust-toolchain.toml  sw.js
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yaml  netlify-deploy.yaml  publish-demo.yaml  release.yaml
.github/workflows/cache/: action.yaml
.github/workflows/llvm/: action.yaml
.github/workflows/toolchain/: action.yaml
assets/: index.000ccaba.js  index.0201af75.js  index.1651b56d.css  index.24d1bc07.js  index.264cd99a.js  index.2839e867.js  index.307d0b67.js  index.326d26a4.js  index.424d11f7.js  index.4786e7a3.js  index.48112802.js  index.49cc0f61.js  index.5b6d70a8.js  index.5e932ed2.js  index.7347cb38.js  index.76fdfa45.js  index.77d20184.js  index.7b13cf4d.js  index.81e3248c.js  index.83d44764.js  index.86fbd4d1.js  index.896444db.js  index.8c629516.js  index.90208608.js  index.907bc4a1.js  index.a1916af6.js  index.a410b70c.js  index.a7aa72f2.js  index.b06407ef.js  index.b129c88e.js  index.b1985e6f.js  index.b2538772.js  index.b79349f6.js  index.c6905fc0.js  index.c88cabe0.js  index.ca5960d7.js  index.cb5c02a5.js  index.cfef7662.js  index.d3ddc8f8.js  index.d8263c69.js  (+64 more)
crates/ast/src/parser/: ident.rs  mod.rs  param_list.rs  parse.rs  parse_test.rs
crates/ast/src/types/: fn_call.rs  fn_dec.rs  if.rs  literal.rs  node.rs  object.rs  unary_op.rs  var_dec.rs
crates/backends/jit/: Cargo.toml
crates/backends/jit/src/: code_gen.rs  compiler.rs  lib.rs  traverse_ast.rs
crates/backends/llvm/: Cargo.toml
crates/backends/llvm/src/: compiler.rs  lib.rs
crates/backends/vm/: Cargo.toml
crates/backends/vm/src/: call_stack.rs  instr.rs  lib.rs  register_file.rs  stack.rs  vm.rs  vm_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/assets/: 1.ts
crates/frontends/cli/: Cargo.toml
crates/frontends/cli/src/: cli_argv.rs  main.rs
crates/frontends/cli/tests/: integration.rs
crates/frontends/cli/tests/assets/: 0.ts
crates/frontends/web/: index.html  package.json  vite.config.ts
crates/frontends/web/docs/: index.html  sw.js
crates/frontends/web/src/: App.tsx  index.css
crates/lexer/src/: detector.rs  detector_test.rs  scanner.rs
crates/lexer/src/token/: keyword.rs  literal.rs  mod.rs  punctuation.rs
crates/utils/ast/: Cargo.toml
crates/utils/ast/src/parser/: error.rs  ident.rs  mod.rs  param_list.rs  parse.rs  parse_test.rs
crates/utils/ast/src/types/: array.rs  bin_op.rs  fn_call.rs  fn_dec.rs  if.rs  literal.rs  mod.rs  node.rs  object.rs  type_annotation.rs  unary_op.rs  var_dec.rs  var_decl.rs
crates/utils/bytecode/: Cargo.toml
crates/utils/bytecode/src/: codegen.rs  codegen_test.rs  instr.rs  lib.rs
crates/utils/js_bind/: Cargo.toml  build-demo.sh  build.sh
crates/utils/js_bind/src/: lib.rs
crates/utils/lexer/: Cargo.toml
crates/utils/lexer/src/: detector.rs  detector_test.rs  scanner.rs  scanner_test.rs
crates/utils/lexer/src/token/: keyword.rs  literal.rs  punctuation.rs  token_variance.rs
crates/utils/macros/: Cargo.toml
crates/utils/macros/src/: lib.rs
crates/utils/macros/tests/: integration.rs
crates/utils/web_bind/: Cargo.toml
crates/vm/: Cargo.toml
crates/vm/src/: instr.rs  lib.rs  stack.rs  vm.rs  vm_test.rs
demo/: .env.production  .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
demo/src/: App.tsx  env.d.ts  main.tsx
src/: main.rs
src/lib/: ast_walker.rs  mod.rs
src/lib/ast/: array.rs  block.rs  fn_call.rs  fn_dec.rs  keyword.rs  literal.rs  mod.rs  node.rs  object.rs  parser.rs  parser_test.rs  punctuation.rs  statement.rs  var_dec.rs
src/lib/ast/parser/: mod.rs  param_list.rs  parse.rs  parse_test.rs  test.rs
src/lib/ast/types/: array.rs  (+10 more)
src/lib/lexer/: detector.rs  detector_test.rs  scanner.rs  scanner_test.rs
src/lib/parser/: mod.rs  tokens.rs  tokens_test.rs  types.rs  types_test.rs
src/lib/tokenizer/: detector.rs  mod.rs  scanner.rs  scanner_test.rs  token.rs  tokenizer.rs  tokenizer_test.rs  tokens.rs  tokens_test.rs  walker.rs
src/lib/wasm/: leb128.rs  mod.rs  op_codes.rs
tests/: integration_test.rs
(+12 files in other folders)
