[package]
name = "typesitter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
clap = { version = "3.0.5", features = ["derive"] }
tree-sitter = "0.20.2"
tree-sitter-typescript = "0.20"
cranelift = "0.80"
cranelift-module = "0.80"
cranelift-jit = "0.80"
anyhow = "1.0.52"
