[package]
name = "llvm"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
ast = { path = "../../utils/ast" }
