[package]
name = "cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
ast = { path = "../../utils/ast" }
lexer = { path = "../../utils/lexer" }
vm = { path = "../../backends/vm" }

[dev-dependencies]
assert_cmd = "2.0"
