[package]
name = "ast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
lexer = { path = "../lexer" }
