[package]
name = "js_bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
demo = []

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
serde_json = "1.0"
serde = "1.0"
ast = { path = "../../utils/ast", features = ["js_bind"] }
lexer = { path = "../../utils/lexer", features = ["js_bind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
