[package]
name = "lexer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
nom = "7.1"
nom_locate = "4.0"
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = "1.0.79", optional = true }

[features]
js_bind = ["dep:serde", "dep:serde_json"]
