[package]
name = "web_bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
log = "0.4"
env_logger = "0.8"
serde_json = "1.0.79"
serde = "1.0.136"
ast = { path = "../../utils/ast" }
lexer = { path = "../../utils/lexer" }
